Fixes issue where modal heading could overlap button.

--- a/scss/_patterns/_widgets.scss
+++ b/scss/_patterns/_widgets.scss
@@ -46,6 +46,7 @@
 
     h2 {
       margin-bottom: 1rem;
+      padding-right: 4rem;
 
       &.banner {
         // fit this guy to edge of modal
